yiltc-v0.2-backup/testsuite/negative/defer_non_call.yilt
// Using a keyword as an identifier should fail at the lexer/parser level
fn main()
    let fn = 42
